text/plain form encoding ignored and incorrectly specified in request header. https://bugs.webkit.org/show_bug.cgi?id=20795

Patch by Vineet Chaudhary <vineet.chaudhary@motorola.com> on 2011-10-31
Reviewed by Darin Adler.

Source/WebCore:

This patch fixes the behaviour of forms where enctype is set to
text/plain, encoding is also text/plain.

Tests: fast/forms/form-get-textplain.html
       http/tests/misc/form-post-textplain.html

* loader/FormSubmission.cpp:
(WebCore::FormSubmission::create):
* platform/network/FormData.cpp:
(WebCore::FormData::create):
(WebCore::FormData::appendKeyValuePairItems):
* platform/network/FormData.h:
(WebCore::FormData::parseEncodingType):
* platform/network/FormDataBuilder.cpp:
(WebCore::FormDataBuilder::addKeyValuePairAsFormData): Modified encoding scheme for text/plain.
* platform/network/FormDataBuilder.h:

LayoutTests:

Added tests for GET and POST methods for text/plain enctype.
Forms submitted using GET with a content-type of text/plain actually,
send data in URL encoded in the URL.
Forms with POST method and content-type of text/plain actually send data in text/plain.
Modified expected results for mailto tests as per the new behavior.

* fast/forms/form-get-textplain-expected.txt: Added.
* fast/forms/form-get-textplain.html: Added.
* fast/forms/mailto/post-multiple-items-text-plain-expected.txt:
* fast/forms/mailto/post-text-plain-expected.txt:
* fast/forms/mailto/post-text-plain-with-accept-charset-expected.txt:
* http/tests/misc/form-post-textplain-expected.txt: Added.
* http/tests/misc/form-post-textplain.html: Added.
* http/tests/misc/resources/form-post-textplain.php: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/fast/forms/mailto/formenctype-attribute-button-html-expected.txt:
* platform/gtk/fast/forms/mailto/formenctype-attribute-input-html-expected.txt:
* platform/qt/test_expectations.txt:
* platform/win/test_expectations.txt:

Canonical link: https://commits.webkit.org/87504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98896 268f45cc-cd09-0410-ab3c-d52691b4dbfc